--- a/독서/8. 면접을 위한 cs 전공지식 노트/0.0 목차.md
+++ b/독서/8. 면접을 위한 cs 전공지식 노트/0.0 목차.md
@@ -1,2 +1,2 @@
-[[01-00. 디자인 패턴과 프로그래밍 패러다임]]
-[[02-00. 네트워크]]
+[01-00. 디자인 패턴과 프로그래밍 패러다임](01.%20디자인%20패턴과%20프로그래밍%20패러다임/01-00.%20디자인%20패턴과%20프로그래밍%20패러다임.md)  
+[02-00. 네트워크](02.%20네트워크/02-00.%20네트워크.md)
