01-04. 전략 패턴.md

--- a/독서/8. 면접을 위한 cs 전공지식 노트/01. 디자인 패턴과 프로그래밍 패러다임/01-04. 전략 패턴.md
+++ b/독서/8. 면접을 위한 cs 전공지식 노트/01. 디자인 패턴과 프로그래밍 패러다임/01-04. 전략 패턴.md
@@ -1,8 +1,12 @@
-전략 패턴은 정책 패턴이라고도 하며, 객체의 행위를 바꾸고 싶은 경우 '직접' 수정하지 않고 전략이고 부르는 '캡슐화한 알고리즘'을 컨텍스트 안에서 바꿔주면서 상호 교체가 가능하게 만드는 패턴입니다.
+전략 패턴은 정책 패턴이라고도 하며, 객체의 행위를 바꾸고 싶은 경우 '직접' 수정하지 않고 전략이고
+부르는 '캡슐화한 알고리즘'을 컨텍스트 안에서 바꿔주면서 상호 교체가 가능하게 만드는 패턴입니다.
 
-우리가 어떤 것을 살 때 네이버페이, 카카오페이 등 다양한 벙법으로 결제하듯이 어떤 아이템을 살 때 LUNACard로 사는 것과 KAKAOCard로 사는 것을 구현한 예제입니다. 결제 방식의 '전략'만 바꿔서 두 가지 방식으로 결제하는 것을 구현했습니다.
+우리가 어떤 것을 살 때 네이버페이, 카카오페이 등 다양한 벙법으로 결제하듯이 어떤 아이템을 살 때
+LUNACard로 사는 것과 KAKAOCard로 사는 것을 구현한 예제입니다. 결제 방식의 '전략'만 바꿔서
+두 가지 방식으로 결제하는 것을 구현했습니다.
 
 ## 자바의 전략 패턴
+
 ```java
 import java.text.DecimalFormat;
 import java.util.ArrayList;
@@ -119,15 +123,21 @@ public class HelloWorld {
 }
 ```
 
-앞의 코드는 쇼핑 카트에 아이템을 담아 LUNACard 또는 KAKAOCard라는 두 개의 전략으로 결제하는 코드이다.
+앞의 코드는 쇼핑 카트에 아이템을 담아 LUNACard 또는 KAKAOCard라는 두 개의 전략으로 결제하는
+코드이다.
 
 **컨텍스트**  
-프로그래밍에서의 컨텍스트는 상황, 맥락, 문맥을 의미하며 개발자가 어떠한 작업을 완료하는 데 필요한 모든 관련 정보를 말한다.
+프로그래밍에서의 컨텍스트는 상황, 맥락, 문맥을 의미하며 개발자가 어떠한 작업을 완료하는 데 필요한 모든
+관련 정보를 말한다.
 
 ## Passport 의 전략 패턴
+
 전략 패턴을 활용한 라이브러리로는 passport가 있다.
 
-passport는 Node.js에서 인증 모듈을 구현할 때 쓰는 미들웨어 라이브러리로, 여러 가지 '전략'을 기반으로 인증할 수 있게 한다. 서비스 내의 회원가입되 낭이디와 비밀번호를 기반으로 인증하는 LocalStrategy 전략과 페이스북, 네이버 등 다른 서비스를 기반으로 인증하는 OAuth 전략 등을 지원한다.
+passport는 Node.js에서 인증 모듈을 구현할 때 쓰는 미들웨어 라이브러리로, 여러 가지 '전략'을
+기반으로 인증할 수 있게 한다. 서비스 내의 회원가입되 낭이디와 비밀번호를 기반으로 인증하는
+LocalStrategy 전략과 페이스북, 네이버 등 다른 서비스를 기반으로 인증하는 OAuth 전략 등을
+지원한다.
 
 다음 코드처럼 '전략'만 바꿔서 인증하는 것을 볼 수 있다.
 
@@ -151,4 +161,5 @@ passport.use(new LocalStrategy(
 ));
 ```
 
-`passport.use(new LocalStrategy(...)` 처럼 `passport.use()`라는 메서드에 '전략'을 매개변수로 넣어서 로직을 수행하는 것을 볼 수 있다.
+`passport.use(new LocalStrategy(...)` 처럼 `passport.use()`라는
+메서드에 '전략'을 매개변수로 넣어서 로직을 수행하는 것을 볼 수 있다.
