--- a/독서/8. 면접을 위한 cs 전공지식 노트/01. 디자인 패턴과 프로그래밍 패러다임/01-02. 싱글톤 패턴.md
+++ b/독서/8. 면접을 위한 cs 전공지식 노트/01. 디자인 패턴과 프로그래밍 패러다임/01-02. 싱글톤 패턴.md
@@ -1,9 +1,14 @@
-싱글톤 패턴은 하나의 클래스에 오직 하나의 인스턴스만 가지는 패턴이다. 하나의 클래스를 기반으로 여러 개의 개별적인 인스턴스를 만들 수 있지만, 그렇게 하지 않고 하나의 클래스를 기반으로 단 하나의 인스턴스를 만들어 이를 기반으로 로직을 만드는 데 쓰이며, 보통 데이터베이스 연결 모듈에 많이 사용한다.
+싱글톤 패턴은 하나의 클래스에 오직 하나의 인스턴스만 가지는 패턴이다. 하나의 클래스를 기반으로 여러 개의
+개별적인 인스턴스를 만들 수 있지만, 그렇게 하지 않고 하나의 클래스를 기반으로 단 하나의 인스턴스를 만들어
+이를 기반으로 로직을 만드는 데 쓰이며, 보통 데이터베이스 연결 모듈에 많이 사용한다.
 
-하나의 인스턴스를 만들어 놓고 해당 인스턴스를 다른 모듈들이 공유하며 사용하기 때문에 인스턴스를 생성할 때 드는 비용이 줄어드는 장점이 있다. 하지만 의존성이 높아진다는 단점이 있다.
+하나의 인스턴스를 만들어 놓고 해당 인스턴스를 다른 모듈들이 공유하며 사용하기 때문에 인스턴스를 생성할 때
+드는 비용이 줄어드는 장점이 있다. 하지만 의존성이 높아진다는 단점이 있다.
 
 ## 자바스크립트의 싱글톤 패턴
-자바스크립트에서는 리터럴 {} 또는  new Object로 객체를 생성하게 되면 다른 어떤 객체와도 같지 않기 때문에 이 자체만으로 싱글톤 패턴을 구현할 수 있다. 
+
+자바스크립트에서는 리터럴 {} 또는 new Object로 객체를 생성하게 되면 다른 어떤 객체와도 같지 않기
+때문에 이 자체만으로 싱글톤 패턴을 구현할 수 있다.
 
 자바스크립트에서 싱글톤 패턴은 다음과 같이 만들 수 있다.
 
@@ -20,7 +25,9 @@ console.log(obj === obj2);
 // false
 ```
 
-앞의 코드에서 볼 수 있듯이 obj와 obj2는 다른 인스턴스를 가진다. 이 또한 new Object라는 클래스에서 나온 단 하나의 인스턴스니 어느 정도 싱글톤 패턴이라 볼 수 있지만, 실제 싱글톤 패턴은 보통 다음과 같은 코드로 구성된다.
+앞의 코드에서 볼 수 있듯이 obj와 obj2는 다른 인스턴스를 가진다. 이 또한 new Object라는
+클래스에서 나온 단 하나의 인스턴스니 어느 정도 싱글톤 패턴이라 볼 수 있지만, 실제 싱글톤 패턴은 보통
+다음과 같은 코드로 구성된다.
 
 ```js
 class Singleton {
@@ -44,10 +51,13 @@ console.log(a === b);
 // true
 ```
 
-앞의 코드는 Singleton.instance 라는 하나의 인스턴스를 가지는  Singleton 클래스를 구현한 모습이다. 이를 통해 a와 b는 하나의 인스턴스를 가진다.
+앞의 코드는 Singleton.instance 라는 하나의 인스턴스를 가지는 Singleton 클래스를
+구현한 모습이다. 이를 통해 a와 b는 하나의 인스턴스를 가진다.
 
 ## 데이터베이스 연결 모듈
+
 앞서 설명한 싱글톤 패턴은 데이터베이스 연결 모듈에 많이 쓰인다.
+
 ```js
 
 const URL = "DBURL://DBURL";
@@ -73,9 +83,11 @@ console.log(a === b);
 // true
 ```
 
-이렇게 DB.instance 라는 하나의 인스턴스를 기반으로 a, b 를 생성하는 것을 볼 수 있다. 이를 통해 데이터베이스 연결에 관한 인스턴스 생성 비용을 아낄 수 있다.
+이렇게 DB.instance 라는 하나의 인스턴스를 기반으로 a, b 를 생성하는 것을 볼 수 있다. 이를
+통해 데이터베이스 연결에 관한 인스턴스 생성 비용을 아낄 수 있다.
 
 ## 자바에서의 싱글톤
+
 자바로는 다음과 같이 할 수 있다.
 
 ```java
@@ -109,9 +121,12 @@ public class HelloWorld {
 ```
 
 ## mongoose의 싱글톤 패턴
-실제로 싱글톤 패턴은 Node.js에서 MongoDB 데이터베이스를 연결할 때 쓰는 mongoose 모듈에서 볼 수 있다.
 
-mongoose의 데이터베이스를 연결 할 때 쓰는 connect() 라는 함수는 싱글톤 인스턴스를 반환한다. 다음은 connect() 함수를 구현할 때 쓰인 실제 코드이다.
+실제로 싱글톤 패턴은 Node.js에서 MongoDB 데이터베이스를 연결할 때 쓰는 mongoose 모듈에서
+볼 수 있다.
+
+mongoose의 데이터베이스를 연결 할 때 쓰는 connect() 라는 함수는 싱글톤 인스턴스를 반환한다.
+다음은 connect() 함수를 구현할 때 쓰인 실제 코드이다.
 
 ```js
 Mongoose.prototype.connect = function(uri, options, callback) {
@@ -131,6 +146,7 @@ Mongoose.prototype.connect = function(uri, options, callback) {
 ```
 
 ## MySQL의 싱글톤 패턴
+
 Node.js에서 MySQL 데이터베이스를 연결 할 때도 싱글톤 패턴이 쓰인다.
 
 ```js
@@ -161,25 +177,41 @@ pool.query(query, function(error, results, fields) {
 }) 
 ```
 
-앞의 코드처럼 메인 모듈에서 데이터베이스 연결에 관한 인스턴스를 정의하고 다른 모듈인 A 또는 B 에서 해당 인스턴스를 기반으로 쿼리를 보내는 형식으로 쓰인다.
+앞의 코드처럼 메인 모듈에서 데이터베이스 연결에 관한 인스턴스를 정의하고 다른 모듈인 A 또는 B 에서 해당
+인스턴스를 기반으로 쿼리를 보내는 형식으로 쓰인다.
 
 ## 싱글톤 패턴의 단점
-싱글톤 패턴은 TDD를 할 때 걸림돌이 된다. TDD를 할 때 단위 테스트를 주로 하는데, 단위 테스트는 테스트가 서로 독립적이어야 하며 테스트를 어떤 순서로든 실행할 수 있어야 한다. 하지만 싱글톤 패턴은 미리 생성된 하나의 인스턴스를 기반으로 구현하는 패턴이므로 각 테스트마다 '독립적인' 인스턴스를 만들기가 어렵다.
+
+싱글톤 패턴은 TDD를 할 때 걸림돌이 된다. TDD를 할 때 단위 테스트를 주로 하는데, 단위 테스트는
+테스트가 서로 독립적이어야 하며 테스트를 어떤 순서로든 실행할 수 있어야 한다. 하지만 싱글톤 패턴은 미리
+생성된 하나의 인스턴스를 기반으로 구현하는 패턴이므로 각 테스트마다 '독립적인' 인스턴스를 만들기가 어렵다.
 
 ## 의존성 주입
-또한, 싱글톤 패턴은 사용하기가 쉽고 굉장히 실용적이지만 모듈간의 결합을 강하게 만들 수 있다는 단점이 있다. 이때 의존성 주입을 통해 모듈간의 결합을 조금 더 느슨하게 만들어 해결할 수 있다.
 
-참고로 의존성이란 종속성이라고도 하며 A가 B에 의존성이 있다는 것은 B의 변경 사항에 대해 A또한 변해야 된다는 것을 의미한다.
+또한, 싱글톤 패턴은 사용하기가 쉽고 굉장히 실용적이지만 모듈간의 결합을 강하게 만들 수 있다는 단점이
+있다. 이때 의존성 주입을 통해 모듈간의 결합을 조금 더 느슨하게 만들어 해결할 수 있다.
 
-메인 모듈이 '직접' 다른 하위 모듈에 대한 의존성을 주기보다는 중간에 의존성 주입자가 이 부분을 가로채 메인 모듈이 '간접'적으로 의존성을 주입하는 방식이다.
+참고로 의존성이란 종속성이라고도 하며 A가 B에 의존성이 있다는 것은 B의 변경 사항에 대해 A또한 변해야
+된다는 것을 의미한다.
+
+메인 모듈이 '직접' 다른 하위 모듈에 대한 의존성을 주기보다는 중간에 의존성 주입자가 이 부분을 가로채
+메인 모듈이 '간접'적으로 의존성을 주입하는 방식이다.
 
 이를 통해 메인 모듈은 하위 모듈에 대한 의존성이 떨어지게 된다. 참고로 이를 '디커플링이 된다'고도 한다.
 
 ### 의존성 주입의 장점
-모듈들을 쉽게 교체할 수 있는 구조가 되어 테스팅하기 쉽고 마이그레이션하기도 수월하다. 또한, 구현할 때 추상화 레이어를 넣고 이를 기반으로 구현체를 넣어 주기 때문에 애플리케이션 의존성 방향이 일관되고, 애플리케이션을 쉽게 추론할 수 있으며, 모듈 간의 관계들이 조금 더 명확해진다.
+
+모듈들을 쉽게 교체할 수 있는 구조가 되어 테스팅하기 쉽고 마이그레이션하기도 수월하다. 또한, 구현할 때
+추상화 레이어를 넣고 이를 기반으로 구현체를 넣어 주기 때문에 애플리케이션 의존성 방향이 일관되고,
+애플리케이션을 쉽게 추론할 수 있으며, 모듈 간의 관계들이 조금 더 명확해진다.
 
 ### 의존성 주입의 단점
-모듈들이 더욱 더 분리되므로 클래스 수가 늘어나 복잡성이 증가될 수 있으며 약간의 런타임 패널티가 생기기도 한다.
+
+모듈들이 더욱 더 분리되므로 클래스 수가 늘어나 복잡성이 증가될 수 있으며 약간의 런타임 패널티가 생기기도
+한다.
 
 ### 의존성 주입 원칙
-의존성 주입은  "상위 모듈은 하위 모듈에서 어떠한 것도 가져오지 않아야 한다. 또한, 둘 다 추상화에 의존해야 하며, 이때 추상화는 세부 사항에 의존하지 말아야 한다."라는 의존성 주입 원칙을 지켜주면서 만들어야 한다.
+
+의존성 주입은  "상위 모듈은 하위 모듈에서 어떠한 것도 가져오지 않아야 한다. 또한, 둘 다 추상화에
+의존해야 하며, 이때 추상화는 세부 사항에 의존하지 말아야 한다."라는 의존성 주입 원칙을 지켜주면서
+만들어야 한다.
