--- a/독서/8. 면접을 위한 cs 전공지식 노트/01. 디자인 패턴과 프로그래밍 패러다임/01-05. 옵저버 패턴.md
+++ b/독서/8. 면접을 위한 cs 전공지식 노트/01. 디자인 패턴과 프로그래밍 패러다임/01-05. 옵저버 패턴.md
@@ -1,28 +1,33 @@
-옵저버 패턴은 주체가 어떤 객체의 상태 변화를 관찰하다가 상태 변화가 있을 때마다 메서드 등을 통해 옵저버 목록에 있는 옵저버들에게 변화를 알려주는 디자인 패턴이다.
+옵저버 패턴은 주체가 어떤 객체의 상태 변화를 관찰하다가 상태 변화가 있을 때마다 메서드 등을 통해 옵저버
+목록에 있는 옵저버들에게 변화를 알려주는 디자인 패턴이다.
 
-여기서 주체란 객체의 상태 변화를 보고 있는 관찰자이며, 옵저버들이란 이 객체의 상태 변화에 따라 전달되는 메서드 등을 기반으로 '추가 변화 사항'이 생기는 객체들을 의미한다.
+여기서 주체란 객체의 상태 변화를 보고 있는 관찰자이며, 옵저버들이란 이 객체의 상태 변화에 따라 전달되는
+메서드 등을 기반으로 '추가 변화 사항'이 생기는 객체들을 의미한다.
 
-또한, 주체와 객체를 따로 두지 않고 상태가 변경되는 객체를 기반으로 구축하기도 한다. 옵저버 패턴을 사용한 서비스로는 트위터가 있다.
+또한, 주체와 객체를 따로 두지 않고 상태가 변경되는 객체를 기반으로 구축하기도 한다. 옵저버 패턴을 사용한
+서비스로는 트위터가 있다.
 
 내가 어떤 사람인 주체를 '팔로우'했다면 주체가 포스팅을 올리게 되면 알림이 '팔로워'에게 가야한다.
 
 ```mermaid
 flowchart LR
-	m(@Obsevable\nModel)
-	c(@EventListener\nController)
-	v(@Observer\nView)
+    m(@Obsevable\nModel)
+c(@EventListener\nController)
+v(@Observer\nView)
 
-	
-	v --> c
-	c --> m
-	m --> |"modifyAll(), update()"| v
+
+v --> c
+c --> m
+m -->|" modifyAll(), update() "|v
 ```
 
 또한, 옵저버 패턴은 주로 이벤트 기반 시스템에 사용하며 MVC 패턴에도 사용된다.
 
-예를 들어 주체라고 볼 수 있는 모델에서 변경 사항이 생겨 update() 메서드로 옵저버인 뷰에 알려주고 이를 기반으로 컨트롤러 등이 작동하는 것이다.
+예를 들어 주체라고 볼 수 있는 모델에서 변경 사항이 생겨 update() 메서드로 옵저버인 뷰에 알려주고
+이를 기반으로 컨트롤러 등이 작동하는 것이다.
 
 ## 자바에서의 옵저버 패턴
+
 ```java
 import java.util.ArrayList;
 import java.util.List;
@@ -110,26 +115,34 @@ public class HelloWorld {
 }
 ```
 
-
-topic을 기반으로 옵저버 패턴을 구현했다. 여기서 topic은 주체이자 객체가 된다. `class Topic implements Subject`를 통해 Subject interface를 구현했고 `Observer a = new TopicSubscriber("a", topic);`으로 옵저버를 선언할 때 해당 이름과 어떠한 토픽의 옵저버가 될 것인지를 정했다.
+topic을 기반으로 옵저버 패턴을 구현했다. 여기서 topic은 주체이자 객체가 된다.
+`class Topic implements Subject`를 통해 Subject interface를 구현했고
+`Observer a = new TopicSubscriber("a", topic);`으로 옵저버를 선언할 때
+해당 이름과 어떠한 토픽의 옵저버가 될 것인지를 정했다.
 
 ### 자바 : 상속과 구현
+
 잠시 앞의 코드에 나온 implements 등 자바의 상속과 구현의 특징과 차이에 대해 알아보자.
 
 상속
-상속은 자식 클래스가 부모 클래스의 메서드 등을 상속받아 사용하며 자식 클래스에서 추가 및 확장을 할 수 있는 것을 말한다. 이로 인해 재사용성, 중복성의 최소화가 이루어진다.
+상속은 자식 클래스가 부모 클래스의 메서드 등을 상속받아 사용하며 자식 클래스에서 추가 및 확장을 할 수
+있는 것을 말한다. 이로 인해 재사용성, 중복성의 최소화가 이루어진다.
 
 구현
-구현은 부모 인터페이스를 자식 클래스에서 재정의하여 구현하는 것을 말하며, 상속과는 달리 반드시 부모 클래스의 메서드를 재정의하여 구현해야 한다.
+구현은 부모 인터페이스를 자식 클래스에서 재정의하여 구현하는 것을 말하며, 상속과는 달리 반드시 부모
+클래스의 메서드를 재정의하여 구현해야 한다.
 
 상속과 구현의 차이
 상속은 일반 클래스, abstract 클래스를 기반으로 구현하며, 구현은 인터페이스를 기반으로 구현한다.
 
 ## 자바스크립트에서의 옵저버 패턴
+
 자바스크립트에서의 옵저버 패턴은 프록시 객체를 통해 구현할 수도 있다.
 
 프록시 객체
-프록시 객체는 어떠한 대상의 기본적인 동작(속성 접근, 할당, 순회, 열거, 함수 호출 등)의 작업을 가로챌 수 있는 객체를 뜻하며, 자바스크립트에서 프록시 객체는 두 개의 매개변수를 가진다.
+프록시 객체는 어떠한 대상의 기본적인 동작(속성 접근, 할당, 순회, 열거, 함수 호출 등)의 작업을 가로챌
+수 있는 객체를 뜻하며, 자바스크립트에서 프록시 객체는 두 개의 매개변수를 가진다.
+
 - target : 프록시할 대상
 - handler : 프록시 객체의 target 동작을 가로채서 정의할 동작들이 정해져 있는 함수
 
@@ -147,9 +160,13 @@ const p = new Proxy({a : "tester", b : "IS AMUMU ZANGIN"}, handler);
 console.log(p.name,);
 ```
 
-`new Proxy`로 선언한 객체의 a와 b라는 속성에 특정 문자열을 담아서 handler에 "name이라는 속성에 접근할 때는 a와 b라는 것을 합쳐서 문자열을 만들어라"를 구현했습니다. 이렇게 p라는 변수에 name이라는 속성을 선언하지 않았는데도, `p.name`으로 name 속성에 접근하려고 할 때, 그 부분을 가로채 문자열을 만들어 반환하는 것을 볼 수 있습니다.
+`new Proxy`로 선언한 객체의 a와 b라는 속성에 특정 문자열을 담아서 handler에 "
+name이라는 속성에 접근할 때는 a와 b라는 것을 합쳐서 문자열을 만들어라"를 구현했습니다. 이렇게 p라는
+변수에 name이라는 속성을 선언하지 않았는데도, `p.name`으로 name 속성에 접근하려고 할 때, 그
+부분을 가로채 문자열을 만들어 반환하는 것을 볼 수 있습니다.
 
 ### 프록시 객체를 이용한 옵저버 패턴
+
 그렇다면 자바스크립트의 프록시 객체를 통해 옵저버 패턴을 구현해보자.
 
 ```js
@@ -179,10 +196,15 @@ b.me = "couple";
 // me가 [solo] >> [couple]로 변경되었습니다.
 ```
 
-프록시 객체의 get() 함수는 속성과 함수에 대한 접근을 가로채며, has() 함수는 in 연산자의 사용을 가로챈다. set() 함수는 속성에 대한 접근을 가로챈다. set() 함수를 통해 속성에 대한 접근을 "가로채"서 형규라는 속성이 솔로에서 커플로 되는 것을 감지할 수 있었다.
+프록시 객체의 get() 함수는 속성과 함수에 대한 접근을 가로채며, has() 함수는 in 연산자의 사용을
+가로챈다. set() 함수는 속성에 대한 접근을 가로챈다. set() 함수를 통해 속성에 대한 접근을 "
+가로채"서 형규라는 속성이 솔로에서 커플로 되는 것을 감지할 수 있었다.
 
 ### Vue.js 3.0의 옵저버 패턴
-프론트엔드에서 많이 쓰는 프레임워크 Vue.js 3.0에서 ref나 reactive로 정의하면 해당 값이 변경되었을 때 자동으로 DOM에 있는 값이 변경되는데, 이는 앞서 설명한 프록시 객체를 이용한 옵저버 패턴을 이용하여 구현한 것이다.
+
+프론트엔드에서 많이 쓰는 프레임워크 Vue.js 3.0에서 ref나 reactive로 정의하면 해당 값이
+변경되었을 때 자동으로 DOM에 있는 값이 변경되는데, 이는 앞서 설명한 프록시 객체를 이용한 옵저버 패턴을
+이용하여 구현한 것이다.
 
 **용어**
 DOM(Document Object Model)
@@ -230,4 +252,5 @@ function createReactiveObject(
 }
 ```
 
-앞의 코드는 실제로 Vue.js 3.0의 옵저버 패턴이 담긴 코드이다. proxyMap이라는 프록시 객체를 사용했고, 객체 내부의 get(), set() 메서드를 사용한 것을 볼 수 있다.
+앞의 코드는 실제로 Vue.js 3.0의 옵저버 패턴이 담긴 코드이다. proxyMap이라는 프록시 객체를
+사용했고, 객체 내부의 get(), set() 메서드를 사용한 것을 볼 수 있다.
