--- a/독서/7. 객체지향의 사실과 오해/0.0 목차.md
+++ b/독서/7. 객체지향의 사실과 오해/0.0 목차.md
@@ -1,8 +1,8 @@
-[[01-00. 협력하는 객체들의 공동체]]
-[[02-00. 이상한 나라의 객체]]
-[[03-00. 타입과 추상화]]
-[[04-00. 역할, 책임, 협력]]
-[[05-00. 책임과 메시지]]
-[[06-00. 객체 지도]]
-[[07-00. 함께 모으기]]
-[[08-00. 부록]]
+[01-00. 협력하는 객체들의 공동체](01.%20협력하는%20객체들의%20공동체/01-00.%20협력하는%20객체들의%20공동체.md)  
+[02-00. 이상한 나라의 객체](02.%20이상한%20나라의%20객체/02-00.%20이상한%20나라의%20객체.md)  
+[03-00. 타입과 추상화](03.%20타입과%20추상화/03-00.%20타입과%20추상화.md)  
+[04-00. 역할, 책임, 협력](04.%20역할,%20책임,%20협력/04-00.%20역할,%20책임,%20협력.md)  
+[05-00. 책임과 메시지](05.%20책임과%20메시지/05-00.%20책임과%20메시지.md)  
+[06-00. 객체 지도](06.%20객체%20지도/06-00.%20객체%20지도.md)  
+[07-00. 함께 모으기](07.%20함께%20모으기/07-00.%20함께%20모으기.md)  
+[08-00. 부록](08.%20부록/08-00.%20부록.md)  
