--- a/독서/7. 객체지향의 사실과 오해/01. 협력하는 객체들의 공동체/01-00. 협력하는 객체들의 공동체.md
+++ b/독서/7. 객체지향의 사실과 오해/01. 협력하는 객체들의 공동체/01-00. 협력하는 객체들의 공동체.md
@@ -1,12 +1,12 @@
-[[01-01. 협력하는 사람들 - 1]]
-[[01-02. 협력하는 사람들 - 2]]
-[[01-03. 협력하는 사람들 - 3]]
-[[01-04. 협력하는 사람들 - 4]]
-[[01-05. 역할,  책임, 협력 - 1]]
-[[01-06. 역할,  책임, 협력 - 2]]
-[[01-07. 협력 속에 사는 객체 - 1]]
-[[01-08. 협력 속에 사는 객체 - 2]]
-[[01-09. 협력 속에 사는 객체 - 3]]
-[[01-10. 협력 속에 사는 객체 - 4]]
-[[01-11. 객체지향의 본질 - 1]]
-[[01-12. 객체지향의 본질 - 2]]
+[01-01. 협력하는 사람들 - 1](01-01.%20협력하는%20사람들%20-%201.md)  
+[01-02. 협력하는 사람들 - 2](01-02.%20협력하는%20사람들%20-%202.md)  
+[01-03. 협력하는 사람들 - 3](01-03.%20협력하는%20사람들%20-%203.md)  
+[01-04. 협력하는 사람들 - 4](01-04.%20협력하는%20사람들%20-%204.md)  
+[01-05. 역할,  책임, 협력 - 1](01-05.%20역할,%20%20책임,%20협력%20-%201.md)  
+[01-06. 역할,  책임, 협력 - 2](01-06.%20역할,%20%20책임,%20협력%20-%202.md)  
+[01-07. 협력 속에 사는 객체 - 1](01-07.%20협력%20속에%20사는%20객체%20-%201.md)  
+[01-08. 협력 속에 사는 객체 - 2](01-08.%20협력%20속에%20사는%20객체%20-%202.md)  
+[01-09. 협력 속에 사는 객체 - 3](01-09.%20협력%20속에%20사는%20객체%20-%203.md)  
+[01-10. 협력 속에 사는 객체 - 4](01-10.%20협력%20속에%20사는%20객체%20-%204.md)  
+[01-11. 객체지향의 본질 - 1](01-11.%20객체지향의%20본질%20-%201.md)  
+[01-12. 객체지향의 본질 - 2](01-12.%20객체지향의%20본질%20-%202.md)  
