--- a/독서/7. 객체지향의 사실과 오해/02. 이상한 나라의 객체/02-00. 이상한 나라의 객체.md
+++ b/독서/7. 객체지향의 사실과 오해/02. 이상한 나라의 객체/02-00. 이상한 나라의 객체.md
@@ -1,14 +1,14 @@
-[[02-01. 객체지향과 인지 능력-1]]
-[[02-02. 객체지향과 인지 능력-2]]
-[[02-03. 객체, 그리고 이상한 나라 - 1]]
-[[02-04. 객체, 그리고 이상한 나라 - 2]]
-[[02-05. 객체, 그리고 소프트웨어 나라 - 1]]
-[[02-06. 객체, 그리고 소프트웨어 나라 - 2]]
-[[02-07. 객체, 그리고 소프트웨어 나라 - 3]]
-[[02-08. 객체, 그리고 소프트웨어 나라 - 4]]
-[[02-09. 기계로서의 객체]]
-[[02-10. 행동이 상태를 결정한다]]
-[[02-11. 은유와 객체 - 1]]
-[[02-12. 은유와 객체 - 2]]
-[[02-13. 은유와 객체 - 3]]
-[[02-14. 은유와 객체 - 4]]
+[02-01. 객체지향과 인지 능력-1](02-01.%20객체지향과%20인지%20능력-1.md)  
+[02-02. 객체지향과 인지 능력-2](02-02.%20객체지향과%20인지%20능력-2.md)  
+[02-03. 객체, 그리고 이상한 나라 - 1](02-03.%20객체,%20그리고%20이상한%20나라%20-%201.md)  
+[02-04. 객체, 그리고 이상한 나라 - 2](02-04.%20객체,%20그리고%20이상한%20나라%20-%202.md)  
+[02-05. 객체, 그리고 소프트웨어 나라 - 1](02-05.%20객체,%20그리고%20소프트웨어%20나라%20-%201.md)  
+[02-06. 객체, 그리고 소프트웨어 나라 - 2](02-06.%20객체,%20그리고%20소프트웨어%20나라%20-%202.md)  
+[02-07. 객체, 그리고 소프트웨어 나라 - 3](02-07.%20객체,%20그리고%20소프트웨어%20나라%20-%203.md)  
+[02-08. 객체, 그리고 소프트웨어 나라 - 4](02-08.%20객체,%20그리고%20소프트웨어%20나라%20-%204.md)  
+[02-09. 기계로서의 객체](02-09.%20기계로서의%20객체.md)  
+[02-10. 행동이 상태를 결정한다](02-10.%20행동이%20상태를%20결정한다.md)  
+[02-11. 은유와 객체 - 1](02-11.%20은유와%20객체%20-%201.md)  
+[02-12. 은유와 객체 - 2](02-12.%20은유와%20객체%20-%202.md)  
+[02-13. 은유와 객체 - 3](02-13.%20은유와%20객체%20-%203.md)  
+[02-14. 은유와 객체 - 4](02-14.%20은유와%20객체%20-%204.md)  
