--- a/독서/7. 객체지향의 사실과 오해/03. 타입과 추상화/03-00. 타입과 추상화.md
+++ b/독서/7. 객체지향의 사실과 오해/03. 타입과 추상화/03-00. 타입과 추상화.md
@@ -1,19 +1,19 @@
-[[03-01. 추상화를 통한 복잡성 극복]]
-[[03-02. 객체지향과 추상화 - 1]]
-[[03-03. 객체지향과 추상화 - 2]]
-[[03-04. 객체지향과 추상화 - 3]]
-[[03-05. 객체지향과 추상화 - 4]]
-[[03-06. 객체지향과 추상화 - 5]]
-[[03-07. 객체지향과 추상화 - 6]]
-[[03-08. 타입 - 1]]
-[[03-09. 타입 - 2]]
-[[03-10. 타입 - 3]]
-[[03-11. 타입 - 4]]
-[[03-12. 타입의 계층 - 1]]
-[[03-13. 타입의 계층 - 2]]
-[[03-14. 타입의 계층 - 3]]
-[[03-15. 타입의 계층 - 4]]
-[[03-16. 정적 모델 - 1]]
-[[03-17. 정적 모델 - 2]]
-[[03-18. 정적 모델 - 3]]
-[[03-19. 정적 모델 - 4]]
+[03-01. 추상화를 통한 복잡성 극복](03-01.%20추상화를%20통한%20복잡성%20극복.md)  
+[03-02. 객체지향과 추상화 - 1](03-02.%20객체지향과%20추상화%20-%201.md)  
+[03-03. 객체지향과 추상화 - 2](03-03.%20객체지향과%20추상화%20-%202.md)  
+[03-04. 객체지향과 추상화 - 3](03-04.%20객체지향과%20추상화%20-%203.md)  
+[03-05. 객체지향과 추상화 - 4](03-05.%20객체지향과%20추상화%20-%204.md)  
+[03-06. 객체지향과 추상화 - 5](03-06.%20객체지향과%20추상화%20-%205.md)  
+[03-07. 객체지향과 추상화 - 6](03-07.%20객체지향과%20추상화%20-%206.md)  
+[03-08. 타입 - 1](03-08.%20타입%20-%201.md)  
+[03-09. 타입 - 2](03-09.%20타입%20-%202.md)  
+[03-10. 타입 - 3](03-10.%20타입%20-%203.md)  
+[03-11. 타입 - 4](03-11.%20타입%20-%204.md)  
+[03-12. 타입의 계층 - 1](03-12.%20타입의%20계층%20-%201.md)  
+[03-13. 타입의 계층 - 2](03-13.%20타입의%20계층%20-%202.md)  
+[03-14. 타입의 계층 - 3](03-14.%20타입의%20계층%20-%203.md)  
+[03-15. 타입의 계층 - 4](03-15.%20타입의%20계층%20-%204.md)  
+[03-16. 정적 모델 - 1](03-16.%20정적%20모델%20-%201.md)  
+[03-17. 정적 모델 - 2](03-17.%20정적%20모델%20-%202.md)  
+[03-18. 정적 모델 - 3](03-18.%20정적%20모델%20-%203.md)  
+[03-19. 정적 모델 - 4](03-19.%20정적%20모델%20-%204.md)  
