--- a/독서/7. 객체지향의 사실과 오해/05. 책임과 메시지/05-00. 책임과 메시지.md
+++ b/독서/7. 객체지향의 사실과 오해/05. 책임과 메시지/05-00. 책임과 메시지.md
@@ -1,24 +1,24 @@
-[[05-01. 자율적인 책임 - 1]]
-[[05-02. 자율적인 책임 - 2]]
-[[05-03. 자율적인 책임 - 3]]
-[[05-04. 자율적인 책임 - 4]]
-[[05-05. 자율적인 책임 - 5]]
-[[05-06. 메시지와 메서드 - 1]]
-[[05-07. 메시지와 메서드 - 2]]
-[[05-08. 메시지와 메서드 - 3]]
-[[05-09. 메시지와 메서드 - 4]]
-[[05-10. 메시지와 메서드 - 5]]
-[[05-11. 메시지를 따라라 - 1]]
-[[05-12. 메시지를 따라라 - 2]]
-[[05-13. 메시지를 따라라 - 3]]
-[[05-14. 메시지를 따라라 - 4]]
-[[05-15. 메시지를 따라라 - 5]]
-[[05-16. 객체 인터페이스 - 1]]
-[[05-17. 객체 인터페이스 - 2]]
-[[05-18. 객체 인터페이스 - 3]]
-[[05-19. 객체 인터페이스 - 4]]
-[[05-20. 인터페이스와 구현의 분리 - 1]]
-[[05-21. 인터페이스와 구현의 분리 - 2]]
-[[05-22. 인터페이스와 구현의 분리 - 3]]
-[[05-23. 인터페이스와 구현의 분리 - 4]]
-[[05-24. 책임의 자율성이 협력의 품질을 결정한다 - 1]]
+[05-01. 자율적인 책임 - 1](05-01.%20자율적인%20책임%20-%201.md)  
+[05-02. 자율적인 책임 - 2](05-02.%20자율적인%20책임%20-%202.md)  
+[05-03. 자율적인 책임 - 3](05-03.%20자율적인%20책임%20-%203.md)  
+[05-04. 자율적인 책임 - 4](05-04.%20자율적인%20책임%20-%204.md)  
+[05-05. 자율적인 책임 - 5](05-05.%20자율적인%20책임%20-%205.md)  
+[05-06. 메시지와 메서드 - 1](05-06.%20메시지와%20메서드%20-%201.md)  
+[05-07. 메시지와 메서드 - 2](05-07.%20메시지와%20메서드%20-%202.md)  
+[05-08. 메시지와 메서드 - 3](05-08.%20메시지와%20메서드%20-%203.md)  
+[05-09. 메시지와 메서드 - 4](05-09.%20메시지와%20메서드%20-%204.md)  
+[05-10. 메시지와 메서드 - 5](05-10.%20메시지와%20메서드%20-%205.md)  
+[05-11. 메시지를 따라라 - 1](05-11.%20메시지를%20따라라%20-%201.md)  
+[05-12. 메시지를 따라라 - 2](05-12.%20메시지를%20따라라%20-%202.md)  
+[05-13. 메시지를 따라라 - 3](05-13.%20메시지를%20따라라%20-%203.md)  
+[05-14. 메시지를 따라라 - 4](05-14.%20메시지를%20따라라%20-%204.md)  
+[05-15. 메시지를 따라라 - 5](05-15.%20메시지를%20따라라%20-%205.md)  
+[05-16. 객체 인터페이스 - 1](05-16.%20객체%20인터페이스%20-%201.md)  
+[05-17. 객체 인터페이스 - 2](05-17.%20객체%20인터페이스%20-%202.md)  
+[05-18. 객체 인터페이스 - 3](05-18.%20객체%20인터페이스%20-%203.md)  
+[05-19. 객체 인터페이스 - 4](05-19.%20객체%20인터페이스%20-%204.md)  
+[05-20. 인터페이스와 구현의 분리 - 1](05-20.%20인터페이스와%20구현의%20분리%20-%201.md)  
+[05-21. 인터페이스와 구현의 분리 - 2](05-21.%20인터페이스와%20구현의%20분리%20-%202.md)  
+[05-22. 인터페이스와 구현의 분리 - 3](05-22.%20인터페이스와%20구현의%20분리%20-%203.md)  
+[05-23. 인터페이스와 구현의 분리 - 4](05-23.%20인터페이스와%20구현의%20분리%20-%204.md)  
+[05-24. 책임의 자율성이 협력의 품질을 결정한다 - 1](05-24.%20책임의%20자율성이%20협력의%20품질을%20결정한다%20-%201.md)  
