--- a/독서/7. 객체지향의 사실과 오해/06. 객체 지도/06-00. 객체 지도.md
+++ b/독서/7. 객체지향의 사실과 오해/06. 객체 지도/06-00. 객체 지도.md
@@ -1,12 +1,12 @@
-[[06-01. 객체지도]]
-[[06-02. 기능 설계 대 구조 설계 - 1]]
-[[06-03. 두 가지 재료 기능과 구조 - 1]]
-[[06-04. 안정적인 재료 구조 - 1]]
-[[06-05. 안정적인 재료 구조 - 2]]
-[[06-06. 안정적인 재료 구조 - 3]]
-[[06-07. 안정적인 재료 구조 - 4]]
-[[06-08. 불안정한 재료 기능 - 1]]
-[[06-09. 불안정한 재료 기능 - 2]]
-[[06-10. 불안정한 재료 기능 - 3]]
-[[06-11. 재료 합치기 기능과 구조의 통합 - 1]]
-[[06-12. 재료 합치기 기능과 구조의 통합 - 2]]
+[06-01. 객체지도](06-01.%20객체지도.md)  
+[06-02. 기능 설계 대 구조 설계 - 1](06-02.%20기능%20설계%20대%20구조%20설계%20-%201.md)  
+[06-03. 두 가지 재료 기능과 구조 - 1](06-03.%20두%20가지%20재료%20기능과%20구조%20-%201.md)  
+[06-04. 안정적인 재료 구조 - 1](06-04.%20안정적인%20재료%20구조%20-%201.md)  
+[06-05. 안정적인 재료 구조 - 2](06-05.%20안정적인%20재료%20구조%20-%202.md)  
+[06-06. 안정적인 재료 구조 - 3](06-06.%20안정적인%20재료%20구조%20-%203.md)  
+[06-07. 안정적인 재료 구조 - 4](06-07.%20안정적인%20재료%20구조%20-%204.md)  
+[06-08. 불안정한 재료 기능 - 1](06-08.%20불안정한%20재료%20기능%20-%201.md)  
+[06-09. 불안정한 재료 기능 - 2](06-09.%20불안정한%20재료%20기능%20-%202.md)  
+[06-10. 불안정한 재료 기능 - 3](06-10.%20불안정한%20재료%20기능%20-%203.md)  
+[06-11. 재료 합치기 기능과 구조의 통합 - 1](06-11.%20재료%20합치기%20기능과%20구조의%20통합%20-%201.md)  
+[06-12. 재료 합치기 기능과 구조의 통합 - 2](06-12.%20재료%20합치기%20기능과%20구조의%20통합%20-%202.md)
