--- a/독서/7. 객체지향의 사실과 오해/07. 함께 모으기/07-00. 함께 모으기.md
+++ b/독서/7. 객체지향의 사실과 오해/07. 함께 모으기/07-00. 함께 모으기.md
@@ -1,9 +1,9 @@
-[[07-01. 커피 전문점 도메인 - 1]]
-[[07-02. 커피 전문점 도메인 - 2]]
-[[07-03. 커피 전문점 도메인 - 3]]
-[[07-04. 설계하고 구현하기 - 1]]
-[[07-05. 설계하고 구현하기 - 2]]
-[[07-06. 설계하고 구현하기 - 3]]
-[[07-07. 코드와 세 가지 관점 - 1]]
-[[07-08. 코드와 세 가지 관점 - 2]]
-[[07-09. 코드와 세 가지 관점 - 3]]
+[07-01. 커피 전문점 도메인 - 1](07-01.%20커피%20전문점%20도메인%20-%201.md)  
+[07-02. 커피 전문점 도메인 - 2](07-02.%20커피%20전문점%20도메인%20-%202.md)  
+[07-03. 커피 전문점 도메인 - 3](07-03.%20커피%20전문점%20도메인%20-%203.md)  
+[07-04. 설계하고 구현하기 - 1](07-04.%20설계하고%20구현하기%20-%201.md)  
+[07-05. 설계하고 구현하기 - 2](07-05.%20설계하고%20구현하기%20-%202.md)  
+[07-06. 설계하고 구현하기 - 3](07-06.%20설계하고%20구현하기%20-%203.md)  
+[07-07. 코드와 세 가지 관점 - 1](07-07.%20코드와%20세%20가지%20관점%20-%201.md)  
+[07-08. 코드와 세 가지 관점 - 2](07-08.%20코드와%20세%20가지%20관점%20-%202.md)  
+[07-09. 코드와 세 가지 관점 - 3](07-09.%20코드와%20세%20가지%20관점%20-%203.md)  
