--- a/독서/7. 객체지향의 사실과 오해/08. 부록/08-00. 부록.md
+++ b/독서/7. 객체지향의 사실과 오해/08. 부록/08-00. 부록.md
@@ -1,11 +1,11 @@
-[[08-01. 추상화 기법]]
-[[08-02. 분류와 인스턴스화 - 1]]
-[[08-03. 분류와 인스턴스화 - 2]]
-[[08-04. 분류와 인스턴스화 - 3]]
-[[08-05. 분류와 인스턴스화 - 4]]
-[[08-06. 일반화와 특수화 - 1]]
-[[08-07. 일반화와 특수화 - 2]]
-[[08-08. 일반화와 특수화 - 3]]
-[[08-09. 집합과 분해 - 1]]
-[[08-10. 집합과 분해 - 2]]
-[[08-11. 집합과 분해 - 3]]
+[08-01. 추상화 기법](08-01.%20추상화%20기법.md)  
+[08-02. 분류와 인스턴스화 - 1](08-02.%20분류와%20인스턴스화%20-%201.md)  
+[08-03. 분류와 인스턴스화 - 2](08-03.%20분류와%20인스턴스화%20-%202.md)  
+[08-04. 분류와 인스턴스화 - 3](08-04.%20분류와%20인스턴스화%20-%203.md)  
+[08-05. 분류와 인스턴스화 - 4](08-05.%20분류와%20인스턴스화%20-%204.md)  
+[08-06. 일반화와 특수화 - 1](08-06.%20일반화와%20특수화%20-%201.md)  
+[08-07. 일반화와 특수화 - 2](08-07.%20일반화와%20특수화%20-%202.md)  
+[08-08. 일반화와 특수화 - 3](08-08.%20일반화와%20특수화%20-%203.md)  
+[08-09. 집합과 분해 - 1](08-09.%20집합과%20분해%20-%201.md)  
+[08-10. 집합과 분해 - 2](08-10.%20집합과%20분해%20-%202.md)  
+[08-11. 집합과 분해 - 3](08-11.%20집합과%20분해%20-%203.md)  
