--- a/독서/7. 객체지향의 사실과 오해/04. 역할, 책임, 협력/04-00. 역할, 책임, 협력.md
+++ b/독서/7. 객체지향의 사실과 오해/04. 역할, 책임, 협력/04-00. 역할, 책임, 협력.md
@@ -1,15 +1,15 @@
-[[04-01. 협력 - 1]]
-[[04-02. 협력 - 2]]
-[[04-03. 협력 - 3]]
-[[04-04. 책임 - 1]]
-[[04-05. 책임 - 2]]
-[[04-06. 역할 - 1]]
-[[04-07. 역할 - 2]]
-[[04-08. 역할 - 3]]
-[[04-09. 역할 - 4]]
-[[04-10. 역할 - 5]]
-[[04-11. 객체의 모양을 결정하는 협력 - 1]]
-[[04-12. 객체의 모양을 결정하는 협력 - 2]]
-[[04-13. 객체지향 설계 기법 -1]]
-[[04-12. 객체지향 설계 기법 -2]]
-[[04-13. 객체지향 설계 기법 -3]]
+[04-01. 협력 - 1](04-01.%20협력%20-%201.md)  
+[04-02. 협력 - 2](04-02.%20협력%20-%202.md)  
+[04-03. 협력 - 3](04-03.%20협력%20-%203.md)  
+[04-04. 책임 - 1](04-04.%20책임%20-%201.md)  
+[04-05. 책임 - 2](04-05.%20책임%20-%202.md)  
+[04-06. 역할 - 1](04-06.%20역할%20-%201.md)  
+[04-07. 역할 - 2](04-07.%20역할%20-%202.md)  
+[04-08. 역할 - 3](04-08.%20역할%20-%203.md)  
+[04-09. 역할 - 4](04-09.%20역할%20-%204.md)  
+[04-10. 역할 - 5](04-10.%20역할%20-%205.md)  
+[04-11. 객체의 모양을 결정하는 협력 - 1](04-11.%20객체의%20모양을%20결정하는%20협력%20-%201.md)  
+[04-12. 객체의 모양을 결정하는 협력 - 2](04-12.%20객체의%20모양을%20결정하는%20협력%20-%202.md)  
+[04-13. 객체지향 설계 기법 -1](04-13.%20객체지향%20설계%20기법%20-%201.md)  
+[04-14. 객체지향 설계 기법 -2](04-14.%20객체지향%20설계%20기법%20-%202.md)  
+[04-15. 객체지향 설계 기법 -3](04-15.%20객체지향%20설계%20기법%20-%203.md)  
