--- a/회고/2024/2024 회고.md
+++ b/회고/2024/2024 회고.md
@@ -1,4 +1,4 @@
-![[24년그림.webp]]
+![24년그림](images/24년그림.webp)
 
 ## 2024년을 보내고
 24년은 작년에 이어 나에게 뜻깊은 한해다. 5월에 퇴사했기 때문이다. 이제야 학생, 백수 탈출해서 직장인이 되었다 싶었지만 그세를 참지 못하고 다시 백수가 되었다. 집구석으로 되돌아온 24년이 끝남에 24년을 되돌아본다.
